styles.css
body {
  background-image: url('BackgroundImage.jpg');
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-size: 100vw 100vh;
}

img {
  text-align: center;
  border-radius: 50%;
  position: relative;
  background-color: #12121253;
  margin: auto;
  margin-left: auto;
  margin-right: auto;
  width: 300px;
  display: block;
  height: 300px;
}

.button {
  border: none;
  color: white;
  padding: 15px 32px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  margin: 4px 2px;
  cursor: pointer;
}

.button1 {background-color: #04aa6d7d;}
.button2 {background-color: #008bba73;} 
.button3 {background-color: #f443365e;}

.down {
  background-color: #5776da00;
  border: none;
  color: rgba(255, 255, 255, 0);
  padding: 15px 32px;
  text-align: center;
  display: inline-block;
  font-size: 16px;
  margin: 4px 2px;
}

.backing {
  background-color: rgba(18, 18, 18, 0.326);
  border: none;
  color: rgba(255, 255, 255, 0);
  text-align: center;
  display: inline-block;
  top: 50px;
}

div {
  position: relative;
  color: rgb(255, 255, 255);
  font-size: 60px;
  text-align: center;
  background-color: #12121253;
  padding: 10px;
  margin: auto;
  width: 100%;
  right: 10px;
}

h1 {
  position: relative;
  color: rgb(255, 255, 255);
  font-size: 60px;
  text-align: center;
  padding: 10px;
  margin: auto;
  width: 100%;
  right: 10px;
}

h2 {
  position: relative;
  color: rgb(255, 255, 255);
  font-size: 40px;
  text-align: center;
  padding: 10px;
  margin: auto;
  width: 100%;
  right: 10px;
}

p {
  position: relative;
  color: rgb(255, 255, 255);
  font-size: 20px;
  text-align: center;
  padding: 10px;
  margin: auto;
  width: 100%;
  right: 10px;
}

ul {
  position: relative;
  color: rgb(255, 255, 255);
  font-size: 20px;
  text-align: center;
  padding: 10px;
  margin: auto;
  width: 100%;
  right: 10px;
}

li {
  position: relative;
  color: rgb(255, 255, 255);
  font-size: 20px;
  text-align: center;
  padding: 10px;
  margin: auto;
  width: 100%;
  right: 10px;
}

